--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
+aniso8601==1.3.0
+certifi==2017.7.27.1
+chardet==3.0.4
 click==6.7
 Flask==0.12.2
+Flask-PyMongo==0.5.1
+Flask-RESTful==0.3.6
 gunicorn==19.7.1
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+pymongo==3.5.1
+python-dateutil==2.6.1
+pytz==2017.2
+requests==2.18.4
+six==1.11.0
+urllib3==1.22
 Werkzeug==0.12.2
