--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: python
 python:
   - "3.6"
 install:
-  - pip install pytest pytest-cov
-  - pip install coveralls
+  - pip install -r requirements.txt
 script:
   - bash test.sh
 after_success:
