--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+mock==2.0.0
+nose==1.3.7
+pbr==3.1.1
 pymongo==3.5.1
 python-dateutil==2.6.1
 pytz==2017.2
