--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
   - "3.6"
 install:
+  - pip install pytest pytest-cov
+  - pip install coveralls
   - pip install -r requirements.txt
 script:
   - bash test.sh
