--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aniso8601==1.3.0
-certifi==2017.7.27.1
+certifi==2017.11.5
 chardet==3.0.4
 click==6.7
 coverage==4.4.1
@@ -8,6 +8,7 @@ docopt==0.6.2
 Flask==0.12.2
 Flask-PyMongo==0.5.1
 Flask-RESTful==0.3.6
+googlemaps==2.5.1
 gunicorn==19.7.1
 idna==2.6
 itsdangerous==0.24
@@ -17,7 +18,6 @@ MarkupSafe==1.0
 mock==2.0.0
 nose==1.3.7
 pbr==3.1.1
-pkg-resources==0.0.0
 py==1.4.34
 pymongo==3.5.1
 pytest==3.2.3
