--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Jinja2==2.9.6
 MarkupSafe==1.0
 mock==2.0.0
 nose==1.3.7
-pbr==3.1.1
+pbr==3.1.1OO
 pymongo==3.5.1
 python-dateutil==2.6.1
 pytz==2017.2
@@ -20,3 +20,4 @@ requests==2.18.4
 six==1.11.0
 urllib3==1.22
 Werkzeug==0.12.2
+jwt==2.0
