--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 aniso8601==1.3.0
+coverage==4.4.1
+coveralls==1.2.0
+docopt==0.6.2
 asn1crypto==0.23.0
 certifi==2017.11.5
 cffi==1.11.2
@@ -7,15 +10,23 @@ click==6.7
 cryptography==2.1.3
 Flask==0.12.2
 Flask-RESTful==0.3.6
+googlemaps==2.5.1
 gunicorn==19.7.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
+jsonschema==2.6.0
 MarkupSafe==1.0
+mock==2.0.0
+nose==1.3.7
+pbr==3.1.1
+py==1.4.34
 mongo==0.2.0
 pycparser==2.18
 PyJWT==1.5.3
 pymongo==3.5.1
+pytest==3.2.3
+pytest-cov==2.5.1
 python-dateutil==2.6.1
 pytz==2017.3
 requests==2.18.4
