--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 aniso8601==1.3.0
-coverage==4.4.1
-coveralls==1.2.0
-docopt==0.6.2
 asn1crypto==0.23.0
 certifi==2017.11.5
 cffi==1.11.2
 chardet==3.0.4
 click==6.7
+coverage==4.4.1
+coveralls==1.2.0
 cryptography==2.1.3
+docopt==0.6.2
 Flask==0.12.2
 Flask-RESTful==0.3.6
 googlemaps==2.5.1
@@ -18,11 +18,12 @@ Jinja2==2.9.6
 jsonschema==2.6.0
 MarkupSafe==1.0
 mock==2.0.0
+mongo==0.2.0
 nose==1.3.7
 pbr==3.1.1
 py==1.4.34
-mongo==0.2.0
 pycparser==2.18
+pyfcm==1.4.3
 PyJWT==1.5.3
 pymongo==3.5.1
 pytest==3.2.3
@@ -30,6 +31,7 @@ pytest-cov==2.5.1
 python-dateutil==2.6.1
 pytz==2017.3
 requests==2.18.4
+requests-toolbelt==0.8.0
 six==1.11.0
 urllib3==1.22
 Werkzeug==0.12.2
